chore: add height and weight to pictures

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -214,7 +214,8 @@ function activeLink(urlPart) {
                           images/landing/features/feature1/feature-1_h3xpny_c_scale,w_1806.png 1806w,
                           images/landing/features/feature1/feature-1_h3xpny_c_scale,w_2000.png 2000w"
                 src="images/landing/features/feature1/feature-1.png"
-                alt="Nightwatch test running on a desktop browser and a real mobile device." loading="lazy" decoding="async">
+                alt="Nightwatch test running on a desktop browser and a real mobile device." loading="lazy" decoding="async"
+                width="100%" height="100%">
             </picture>
           </div>
         </article>
@@ -252,7 +253,7 @@ function activeLink(urlPart) {
                           images/landing/features/feature2/feature-2_wr5j5v_c_scale,w_1836.png 1836w,
                           images/landing/features/feature2/feature-2_wr5j5v_c_scale,w_2000.png 2000w"
                 src="images/landing/features/feature2/feature-2.png"
-                alt="Debugging a failed test using HTML reporter and DOM History." loading="lazy" decoding="async">
+                alt="Debugging a failed test using HTML reporter and DOM History." loading="lazy" decoding="async" width="100%" height="100%">
             </picture>
           </div>
         </article>
@@ -288,7 +289,7 @@ function activeLink(urlPart) {
                           images/landing/features/feature3/feature3_tcbm76_c_scale,w_1100.png 1100w"
                 src="images/landing/features/feature3/feature-3.png"
                 alt="Tests running in multiple browsers on a local machine and on multiple machines remotely" loading="lazy"
-                decoding="async">
+                decoding="async" width="100%" height="100%">
             </picture>
           </div>
         </article>
@@ -364,7 +365,7 @@ function activeLink(urlPart) {
                               images/landing/capabilities/cap1/cap1_qzycfd_c_scale,w_300.png 300w,
                               images/landing/capabilities/cap1/cap1_qzycfd_c_scale,w_1100.png 1100w"
                   src="images/landing/capabilities/cap1/cap1.png" alt="Create Nightwatch setup screen." loading="lazy"
-                  decoding="async">
+                  decoding="async" width="100%" height="100%">
               </picture>
             </div>
           </article>
@@ -401,7 +402,7 @@ function activeLink(urlPart) {
                               images/landing/capabilities/cap2/cap2_njfkxf_c_scale,w_300.png 300w,
                               images/landing/capabilities/cap2/cap2_njfkxf_c_scale,w_1100.png 1100w"
                   src="images/landing/capabilities/cap2/cap2.png" alt="Looking at results of accessibility, API, and Visual tests."
-                  loading="lazy" decoding="async">
+                  loading="lazy" decoding="async" width="100%" height="100%">
               </picture>
             </div>
           </article>
@@ -434,7 +435,7 @@ function activeLink(urlPart) {
                               images/landing/capabilities/cap3/cap3_uzdpil_c_scale,w_849.png 849w,
                               images/landing/capabilities/cap3/cap3_uzdpil_c_scale,w_1100.png 1100w"
                   src="images/landing/capabilities/cap3/cap3.png"
-                  alt="Testing pyramid with unit, component, integration and E2E tests." loading="lazy" decoding="async">
+                  alt="Testing pyramid with unit, component, integration and E2E tests." loading="lazy" decoding="async" width="100%" height="100%">
               </picture>
             </div>
           </article>
@@ -464,7 +465,7 @@ function activeLink(urlPart) {
                           images/landing/performance/performance_vve109_c_scale,w_400.png 400w,
                           images/landing/performance/performance_vve109_c_scale,w_1600.png 1600w"
                 src="images/landing/performance/perfomance.png"
-                alt="Graph showing difference in test execution duration compared to Cypress" loading="lazy" decoding="async">
+                alt="Graph showing difference in test execution duration compared to Cypress" loading="lazy" decoding="async" width="100%" height="100%">
             </picture>
           </div>
           <div class="performance__content-description">
@@ -491,7 +492,7 @@ function activeLink(urlPart) {
               <img sizes="(max-width: 1110px) 100vw, 1110px" srcset="
                           images/landing/compromise/compromise_stzord_c_scale,w_500.png 500w,
                           images/landing/compromise/compromise_stzord_c_scale,w_1110.png 1110w" src="compromise.png"
-                alt="Test following the standard running on web and a real mobile device" loading="lazy" decoding="async">
+                alt="Test following the standard running on web and a real mobile device" loading="lazy" decoding="async" width="100%" height="100%">
             </picture>
           </div>
           <div class="comparison__content-wrapper">
@@ -630,7 +631,7 @@ function activeLink(urlPart) {
                     <img sizes="(max-width: 90px) 100vw, 90px" srcset="
                                       images/landing/testimonial/timyao_oaifir_c_scale,w_80.png 80w,
                                       images/landing/testimonial/timyao_oaifir_c_scale,w_90.png 90w" src="timyao_oaifir_c_scale,w_90.png"
-                      alt="Tim Yao image" loading="lazy" decoding="async">
+                      alt="Tim Yao image" loading="lazy" decoding="async" width="100%" height="100%">
                   </picture>
                 </div>
                 <cite class="testimonial__content-card-author-name">
@@ -659,7 +660,7 @@ function activeLink(urlPart) {
                     <img sizes="(max-width: 90px) 100vw, 90px" srcset="
                                       images/landing/testimonial/davidmello_iofo3t_c_scale,w_80.png 80w,
                                       images/landing/testimonial/davidmello_iofo3t_c_scale,w_90.png 90w" src="davidmello.png"
-                      alt="David Mello image" loading="lazy" decoding="async">
+                      alt="David Mello image" loading="lazy" decoding="async" width="100%" height="100%">
                   </picture>
                 </div>
                 <cite class="testimonial__content-card-author-name">
@@ -688,7 +689,7 @@ function activeLink(urlPart) {
                     <img sizes="(max-width: 90px) 100vw, 90px" srcset="
                                       images/landing/testimonial/paulhammant_uowqen_c_scale,w_80.png 80w,
                                       images/landing/testimonial/paulhammant_uowqen_c_scale,w_90.png 90w"
-                      src="paulhammant_uowqen_c_scale,w_90.png" alt="Paul Hammant image" loading="lazy" decoding="async">
+                      src="paulhammant_uowqen_c_scale,w_90.png" alt="Paul Hammant image" loading="lazy" decoding="async" width="100%" height="100%">
                   </picture>
                 </div>
                 <cite class="testimonial__content-card-author-name">
