--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -630,7 +630,7 @@ function activeLink(urlPart) {
                                       images/landing/testimonial/timyao_oaifir_c_scale,w_90.webp 90w">
                     <img sizes="(max-width: 90px) 100vw, 90px" srcset="
                                       images/landing/testimonial/timyao_oaifir_c_scale,w_80.png 80w,
-                                      images/landing/testimonial/timyao_oaifir_c_scale,w_90.png 90w" src="timyao_oaifir_c_scale,w_90.png"
+                                      images/landing/testimonial/timyao_oaifir_c_scale,w_90.png 90w" src="timyao.png"
                       alt="Tim Yao image" loading="lazy" decoding="async" width="100%" height="100%">
                   </picture>
                 </div>
@@ -689,7 +689,7 @@ function activeLink(urlPart) {
                     <img sizes="(max-width: 90px) 100vw, 90px" srcset="
                                       images/landing/testimonial/paulhammant_uowqen_c_scale,w_80.png 80w,
                                       images/landing/testimonial/paulhammant_uowqen_c_scale,w_90.png 90w"
-                      src="paulhammant_uowqen_c_scale,w_90.png" alt="Paul Hammant image" loading="lazy" decoding="async" width="100%" height="100%">
+                      src="paulhammant.png" alt="Paul Hammant image" loading="lazy" decoding="async" width="100%" height="100%">
                   </picture>
                 </div>
                 <cite class="testimonial__content-card-author-name">
@@ -933,64 +933,66 @@ function activeLink(urlPart) {
       <!-- Open Source section end-->
     
       <!-- Call to action section start -->
-      <section class="call-to-action">
-        <div class="call-to-action-image">
-          <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 340 250" fill="none">
-            <title>Celebrating with a high five</title>
-            <g clip-path="url(#a)">
-              <path fill="#fff" stroke="#353535" stroke-width="2.845"
-                d="m191.667 185.349 31.005-31.005c2.067-2.325 4.737-1.615 5.814-.969 1.292.646 2.907 5.168 2.907 5.491 1.033 3.617 29.498 56.197 43.601 82.035h-56.843c-7.536-13.135-23.383-40.372-26.484-44.248-3.1-3.875-1.292-9.151 0-11.304Z" />
-              <path fill="#fff" stroke="#353535" stroke-linejoin="round" stroke-width="2.845"
-                d="m194.574 182.442 23.254-22.608c-2.26-1.937-8.72-12.272-2.583-20.347 6.136-8.074 6.459-20.347 7.105-22.931.517-2.067 3.23-3.875 4.522-4.521 2.067-1.809.861-3.553 0-4.199-5.943-2.325-10.228 3.337-11.627 6.459-.969 2.046-3.553 6.266-6.137 6.783-2.584.517-2.799-2.799-2.584-4.522 0-9.689 8.398-34.235 10.013-37.142.803-1.446.323-3.122 0-3.552-1.034-.775-2.584-.323-3.23 0-4.134 2.584-9.905 17.225-12.273 24.223 0-1.292 4.522-20.67 5.49-23.254.776-2.067 0-3.922-.968-4.199-2.261-.646-4.307 2.153-5.168 3.876.517-2.842-1.077-3.984-1.938-4.199-2.584 0-3.445 3.122-4.198 4.522.516-2.584-.862-3.876-1.615-4.199-2.261-.323-4.091 2.8-4.845 4.199-4.091 11.088-11.562 35.72-15.18 49.414-3.617 13.694 4.091 28.099 8.398 33.589l13.564 22.608Z" />
-              <path stroke="#353535" stroke-linejoin="round" stroke-width="2.845"
-                d="M194.575 76.185c-3.23 7.02-9.043 23.576-9.689 34.558m-2.261 0c3.983-.216 13.307.258 18.732 3.875" />
-              <path stroke="#353535" stroke-linejoin="round" stroke-width="2.845"
-                d="M200.711 75.862c-2.307 7.517-7.106 19.701-8.72 35.204M201.68 96.855c-.969 3.337-2.39 11.82-2.906 16.471M202.326 123.339c-4.414 2.153-12.919 9.043-11.627 19.378" />
-              <path fill="#F0F0F0"
-                d="M230.976 175.131c1.606 2.781 2.472 7.426 0 8.853-2.471 1.427-7.345-.905-8.95-3.685-1.605-2.781-.903-6.192 1.568-7.619 2.472-1.427 5.777-.329 7.382 2.451ZM230.976 206.783c1.606 2.78 2.472 7.426 0 8.853-2.471 1.427-7.345-.905-8.95-3.686-1.605-2.78-.903-6.191 1.568-7.618 2.472-1.427 5.777-.33 7.382 2.451ZM224.519 229.391c1.606 2.78 2.472 7.426 0 8.853-2.471 1.427-7.345-.905-8.95-3.686-1.605-2.78-.903-6.191 1.568-7.618 2.472-1.427 5.777-.33 7.382 2.451ZM263.275 222.285c1.606 2.781 2.472 7.426 0 8.853-2.471 1.427-7.345-.905-8.95-3.685-1.605-2.781-.903-6.192 1.568-7.619 2.472-1.427 5.777-.329 7.382 2.451ZM205.141 189.988c1.605 2.781 2.471 7.426 0 8.853-2.472 1.427-7.346-.905-8.951-3.685-1.605-2.781-.903-6.192 1.569-7.619 2.471-1.427 5.776-.329 7.382 2.451Z" />
-              <path fill="#fff" stroke="#353535" stroke-linejoin="round" stroke-width="2.845"
-                d="M126.75 137.872c2.842 17.311-4.414 39.726-8.397 48.769 10.227 3.014 30.618 8.333 30.359 5.49-.258-2.842 2.046-20.993 3.23-29.713 0-3.337 1.292-12.015 6.459-20.024 6.46-10.012 10.335-29.391 9.044-35.85-1.034-5.168 2.153-8.828 3.875-10.012.969-.431 2.778-1.68 2.261-3.23-.517-1.55-2.584-1.938-3.553-1.938-7.751.646-11.021 7.428-11.627 12.273-.107.861-.646 4.909-3.229 5.168-2.584.258-3.876-4.199-3.23-7.106 0-14.856-4.522-29.713-7.751-35.85-2.584-4.909-5.599-3.66-6.783-2.906-2.067.775-.861 5.06 0 7.105 2.842 8.526 4.306 23.47 4.845 31.005-2.584-8.785-8.398-22.608-10.981-28.421-.646-1.938-2.842-5.62-6.46-4.845-3.617.775-1.507 8.075 0 11.627-.861-1.83-3.423-5.167-6.782-3.876-3.359 1.292-1.4 7.429 0 10.336-2.067-3.876-4.952-3.338-6.137-2.584-2.067 1.292-.861 5.921 0 8.074 3.101 5.943 11.197 33.482 14.857 46.508Z" />
-              <path fill="#353535" stroke="#353535" stroke-width="1.423"
-                d="M110.657 149.657c-21.11 20.616-66.35 78.769-72.406 91.898 29.67 0 87.138.674 90.439 0 3.3-.675 1.795-.988 3.886-2.779 13.922-11.928 31.71-42.009 32.539-52.008.829-9.999-2.865-15.916-4.815-17.624-6.799-4.898-22.978-16.062-33.299-21.537-10.322-5.476-15.197-.915-16.344 2.05Z" />
-              <path stroke="#353535" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.845"
-                d="M124.813 79.091c2.368 4.522 7.493 16.084 9.043 26.161M117.061 84.258c1.83 2.584 7.105 12.209 10.981 28.745" />
-              <circle cx="118.676" cy="161.376" r="1.615" fill="#F0F0F0" />
-              <circle cx="129.658" cy="198.195" r="1.615" fill="#F0F0F0" />
-              <circle cx="157.433" cy="180.755" r="1.615" fill="#F0F0F0" />
-              <circle cx="93.484" cy="201.425" r="1.615" fill="#F0F0F0" />
-              <circle cx="112.218" cy="235.66" r="1.615" fill="#F0F0F0" />
-              <circle cx="63.771" cy="235.66" r="1.615" fill="#F0F0F0" />
-              <path stroke="#353535" stroke-linecap="round" stroke-linejoin="round" stroke-width="5.69"
-                d="M171.969 15v15.826M204.738 19.906l-7.912 13.706M140.701 19.906l7.913 13.706" />
-              <circle cx="78.625" cy="123.338" r="15.711" fill="#F0F0F0" />
-              <circle cx="78.491" cy="123.351" r="18.881" stroke="#353535" stroke-width="2.324" />
-              <path fill="#fff" stroke="#353535" stroke-width="1.743"
-                d="M80.216 115.153c-.5-1.539-2.678-1.539-3.178 0l-1.53 4.71h-4.952c-1.619 0-2.292 2.071-.982 3.023l4.005 2.91-1.53 4.709c-.5 1.54 1.262 2.82 2.572 1.869l4.006-2.911 4.006 2.911c1.31.951 3.072-.329 2.571-1.869l-1.53-4.709 4.006-2.91c1.31-.952.637-3.023-.982-3.023h-4.952l-1.53-4.71Zm1.546 4.759Z" />
-              <path fill="#353535"
-                d="m251.135 63.368.372 1.242a14.225 14.225 0 0 0 9.552 9.553l1.242.372-1.242.371a14.224 14.224 0 0 0-9.552 9.553l-.372 1.242-.372-1.242a14.224 14.224 0 0 0-9.552-9.553l-1.242-.371 1.242-.372a14.225 14.225 0 0 0 9.552-9.552l.372-1.243ZM260.576 100.356a7.384 7.384 0 0 0 4.96 4.959 7.387 7.387 0 0 0-4.96 4.96 7.384 7.384 0 0 0-4.959-4.96 7.38 7.38 0 0 0 4.959-4.959Z" />
-              <path stroke="#353535" stroke-linecap="round" stroke-width="2.847" d="M334 241.198H5" />
-            </g>
-            <defs>
-              <clipPath id="a">
-                <path fill="#fff" d="M0 0h340v250H0z" />
-              </clipPath>
-            </defs>
-          </svg>
-        </div>
-        <div class="call-to-action-content">
-          <div class="call-to-action-content-wrapper">
-            <h2 class="call-to-action-content--heading">Ready to try out?</h2>
-            <p class="call-to-action-content--paragraph">Trusted by over 100k repositories for their test automation!</p>
+      <section class="call-to-action-section">
+        <article class="call-to-action">
+          <div class="call-to-action-image">
+            <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 340 250" fill="none">
+              <title>Celebrating with a high five</title>
+              <g clip-path="url(#a)">
+                <path fill="#fff" stroke="#353535" stroke-width="2.845"
+                  d="m191.667 185.349 31.005-31.005c2.067-2.325 4.737-1.615 5.814-.969 1.292.646 2.907 5.168 2.907 5.491 1.033 3.617 29.498 56.197 43.601 82.035h-56.843c-7.536-13.135-23.383-40.372-26.484-44.248-3.1-3.875-1.292-9.151 0-11.304Z" />
+                <path fill="#fff" stroke="#353535" stroke-linejoin="round" stroke-width="2.845"
+                  d="m194.574 182.442 23.254-22.608c-2.26-1.937-8.72-12.272-2.583-20.347 6.136-8.074 6.459-20.347 7.105-22.931.517-2.067 3.23-3.875 4.522-4.521 2.067-1.809.861-3.553 0-4.199-5.943-2.325-10.228 3.337-11.627 6.459-.969 2.046-3.553 6.266-6.137 6.783-2.584.517-2.799-2.799-2.584-4.522 0-9.689 8.398-34.235 10.013-37.142.803-1.446.323-3.122 0-3.552-1.034-.775-2.584-.323-3.23 0-4.134 2.584-9.905 17.225-12.273 24.223 0-1.292 4.522-20.67 5.49-23.254.776-2.067 0-3.922-.968-4.199-2.261-.646-4.307 2.153-5.168 3.876.517-2.842-1.077-3.984-1.938-4.199-2.584 0-3.445 3.122-4.198 4.522.516-2.584-.862-3.876-1.615-4.199-2.261-.323-4.091 2.8-4.845 4.199-4.091 11.088-11.562 35.72-15.18 49.414-3.617 13.694 4.091 28.099 8.398 33.589l13.564 22.608Z" />
+                <path stroke="#353535" stroke-linejoin="round" stroke-width="2.845"
+                  d="M194.575 76.185c-3.23 7.02-9.043 23.576-9.689 34.558m-2.261 0c3.983-.216 13.307.258 18.732 3.875" />
+                <path stroke="#353535" stroke-linejoin="round" stroke-width="2.845"
+                  d="M200.711 75.862c-2.307 7.517-7.106 19.701-8.72 35.204M201.68 96.855c-.969 3.337-2.39 11.82-2.906 16.471M202.326 123.339c-4.414 2.153-12.919 9.043-11.627 19.378" />
+                <path fill="#F0F0F0"
+                  d="M230.976 175.131c1.606 2.781 2.472 7.426 0 8.853-2.471 1.427-7.345-.905-8.95-3.685-1.605-2.781-.903-6.192 1.568-7.619 2.472-1.427 5.777-.329 7.382 2.451ZM230.976 206.783c1.606 2.78 2.472 7.426 0 8.853-2.471 1.427-7.345-.905-8.95-3.686-1.605-2.78-.903-6.191 1.568-7.618 2.472-1.427 5.777-.33 7.382 2.451ZM224.519 229.391c1.606 2.78 2.472 7.426 0 8.853-2.471 1.427-7.345-.905-8.95-3.686-1.605-2.78-.903-6.191 1.568-7.618 2.472-1.427 5.777-.33 7.382 2.451ZM263.275 222.285c1.606 2.781 2.472 7.426 0 8.853-2.471 1.427-7.345-.905-8.95-3.685-1.605-2.781-.903-6.192 1.568-7.619 2.472-1.427 5.777-.329 7.382 2.451ZM205.141 189.988c1.605 2.781 2.471 7.426 0 8.853-2.472 1.427-7.346-.905-8.951-3.685-1.605-2.781-.903-6.192 1.569-7.619 2.471-1.427 5.776-.329 7.382 2.451Z" />
+                <path fill="#fff" stroke="#353535" stroke-linejoin="round" stroke-width="2.845"
+                  d="M126.75 137.872c2.842 17.311-4.414 39.726-8.397 48.769 10.227 3.014 30.618 8.333 30.359 5.49-.258-2.842 2.046-20.993 3.23-29.713 0-3.337 1.292-12.015 6.459-20.024 6.46-10.012 10.335-29.391 9.044-35.85-1.034-5.168 2.153-8.828 3.875-10.012.969-.431 2.778-1.68 2.261-3.23-.517-1.55-2.584-1.938-3.553-1.938-7.751.646-11.021 7.428-11.627 12.273-.107.861-.646 4.909-3.229 5.168-2.584.258-3.876-4.199-3.23-7.106 0-14.856-4.522-29.713-7.751-35.85-2.584-4.909-5.599-3.66-6.783-2.906-2.067.775-.861 5.06 0 7.105 2.842 8.526 4.306 23.47 4.845 31.005-2.584-8.785-8.398-22.608-10.981-28.421-.646-1.938-2.842-5.62-6.46-4.845-3.617.775-1.507 8.075 0 11.627-.861-1.83-3.423-5.167-6.782-3.876-3.359 1.292-1.4 7.429 0 10.336-2.067-3.876-4.952-3.338-6.137-2.584-2.067 1.292-.861 5.921 0 8.074 3.101 5.943 11.197 33.482 14.857 46.508Z" />
+                <path fill="#353535" stroke="#353535" stroke-width="1.423"
+                  d="M110.657 149.657c-21.11 20.616-66.35 78.769-72.406 91.898 29.67 0 87.138.674 90.439 0 3.3-.675 1.795-.988 3.886-2.779 13.922-11.928 31.71-42.009 32.539-52.008.829-9.999-2.865-15.916-4.815-17.624-6.799-4.898-22.978-16.062-33.299-21.537-10.322-5.476-15.197-.915-16.344 2.05Z" />
+                <path stroke="#353535" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.845"
+                  d="M124.813 79.091c2.368 4.522 7.493 16.084 9.043 26.161M117.061 84.258c1.83 2.584 7.105 12.209 10.981 28.745" />
+                <circle cx="118.676" cy="161.376" r="1.615" fill="#F0F0F0" />
+                <circle cx="129.658" cy="198.195" r="1.615" fill="#F0F0F0" />
+                <circle cx="157.433" cy="180.755" r="1.615" fill="#F0F0F0" />
+                <circle cx="93.484" cy="201.425" r="1.615" fill="#F0F0F0" />
+                <circle cx="112.218" cy="235.66" r="1.615" fill="#F0F0F0" />
+                <circle cx="63.771" cy="235.66" r="1.615" fill="#F0F0F0" />
+                <path stroke="#353535" stroke-linecap="round" stroke-linejoin="round" stroke-width="5.69"
+                  d="M171.969 15v15.826M204.738 19.906l-7.912 13.706M140.701 19.906l7.913 13.706" />
+                <circle cx="78.625" cy="123.338" r="15.711" fill="#F0F0F0" />
+                <circle cx="78.491" cy="123.351" r="18.881" stroke="#353535" stroke-width="2.324" />
+                <path fill="#fff" stroke="#353535" stroke-width="1.743"
+                  d="M80.216 115.153c-.5-1.539-2.678-1.539-3.178 0l-1.53 4.71h-4.952c-1.619 0-2.292 2.071-.982 3.023l4.005 2.91-1.53 4.709c-.5 1.54 1.262 2.82 2.572 1.869l4.006-2.911 4.006 2.911c1.31.951 3.072-.329 2.571-1.869l-1.53-4.709 4.006-2.91c1.31-.952.637-3.023-.982-3.023h-4.952l-1.53-4.71Zm1.546 4.759Z" />
+                <path fill="#353535"
+                  d="m251.135 63.368.372 1.242a14.225 14.225 0 0 0 9.552 9.553l1.242.372-1.242.371a14.224 14.224 0 0 0-9.552 9.553l-.372 1.242-.372-1.242a14.224 14.224 0 0 0-9.552-9.553l-1.242-.371 1.242-.372a14.225 14.225 0 0 0 9.552-9.552l.372-1.243ZM260.576 100.356a7.384 7.384 0 0 0 4.96 4.959 7.387 7.387 0 0 0-4.96 4.96 7.384 7.384 0 0 0-4.959-4.96 7.38 7.38 0 0 0 4.959-4.959Z" />
+                <path stroke="#353535" stroke-linecap="round" stroke-width="2.847" d="M334 241.198H5" />
+              </g>
+              <defs>
+                <clipPath id="a">
+                  <path fill="#fff" d="M0 0h340v250H0z" />
+                </clipPath>
+              </defs>
+            </svg>
           </div>
-          <div class="call-to-action-content-action">
-            <div class="call-to-action-content-action-copy-command">
-              <p class="call-to-action-content-action-copy-command-text">npm init nightwatch</p>
-              <button class="call-to-action-content-action-copy-command-button">Copy</button>
+          <div class="call-to-action-content">
+            <div class="call-to-action-content-wrapper">
+              <h2 class="call-to-action-content--heading">Ready to try out?</h2>
+              <p class="call-to-action-content--paragraph">Trusted by over 100k repositories for their test automation!</p>
             </div>
-            <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html"
-              class="call-to-action-content-action-button--get-started">Get Started</a>
+            <div class="call-to-action-content-action">
+              <div class="call-to-action-content-action-copy-command">
+                <p class="call-to-action-content-action-copy-command-text">npm init nightwatch</p>
+                <button class="call-to-action-content-action-copy-command-button">Copy</button>
+              </div>
+              <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html"
+                class="call-to-action-content-action-button--get-started">Get Started</a>
+            </div>
           </div>
-        </div>
+        </article>
       </section>
       <!-- Call to action section end -->
     </main>
