chore: remove comments

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -20,6 +20,7 @@
   --dropdown-background-color: hsla(0, 0%, 98%, 1);
   --dropdown-box-shadow-color: hsla(0, 0%, 0%, 0.08);
   --footer-background-color: hsla(0, 7.69%, 97.45%, 1);
+  --footer-border-color: hsla(0, 0%, 74%, 1);
   --pagination-background-color: hsla(22.81, 71.6%, 33.14%, 1);
   --pagination-bullet-background-color: hsla(46.67, 18%, 80.39%, 1);
   --header-border-color: hsla(270, 8%, 90.2%, 1);
