--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -296,27 +296,29 @@ function activeLink(urlPart) {
     
         <div class="features__community-stats-timeline-dot" role="presentation"></div>
         <!-- Community section -->
-        <div class="features__community-stats" role="region" aria-label="Nightwatch stats">
-          <p class="features__community-stats__text">Loved by the community</p>
-          <div class="features__community-stats-container">
-            <div class="features__community-stats-wrapper">
-              <h3 class="features__community-stats-wrapper__heading">11.3K</h3>
-              <p class="features__community-stats-wrapper__sub-heading">GitHub Stars</p>
-            </div>
-            <div class="features__community-stats-wrapper">
-              <h3 class="features__community-stats-wrapper__heading">141K</h3>
-              <p class="features__community-stats-wrapper__sub-heading">Used by (repos)</p>
-            </div>
-            <div class="features__community-stats-wrapper">
-              <h3 class="features__community-stats-wrapper__heading">320</h3>
-              <p class="features__community-stats-wrapper__sub-heading">Versions released</p>
-            </div>
-            <div class="features__community-stats-wrapper">
-              <h3 class="features__community-stats-wrapper__heading">800K</h3>
-              <p class="features__community-stats-wrapper__sub-heading">Monthly downloads</p>
+        <article class="features__community-stats-section">
+          <div class="features__community-stats" role="region" aria-label="Nightwatch stats">
+            <p class="features__community-stats__text">Loved by the community</p>
+            <div class="features__community-stats-container">
+              <div class="features__community-stats-wrapper">
+                <h3 class="features__community-stats-wrapper__heading">11.3K</h3>
+                <p class="features__community-stats-wrapper__sub-heading">GitHub Stars</p>
+              </div>
+              <div class="features__community-stats-wrapper">
+                <h3 class="features__community-stats-wrapper__heading">141K</h3>
+                <p class="features__community-stats-wrapper__sub-heading">Used by (repos)</p>
+              </div>
+              <div class="features__community-stats-wrapper">
+                <h3 class="features__community-stats-wrapper__heading">320</h3>
+                <p class="features__community-stats-wrapper__sub-heading">Versions released</p>
+              </div>
+              <div class="features__community-stats-wrapper">
+                <h3 class="features__community-stats-wrapper__heading">800K</h3>
+                <p class="features__community-stats-wrapper__sub-heading">Monthly downloads</p>
+              </div>
             </div>
           </div>
-        </div>
+        </article>
       </section>
       <!-- Nightwatch Feature section end -->
     
