--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -873,6 +873,7 @@
   .features__heading {
     text-align: left;
     padding-bottom: 42px;
+    padding-left: 30px;
   }
 
   .features__content {
@@ -1409,10 +1410,10 @@
   }
 
   .capabilities--single-column .capabilities__card .capabilities__card__image {
-    scale: 2.3;
+    scale: 1.3;
     position: relative;
-    left: 16vh;
-    top: 20vh;
+    left: 30px;
+    top: 26px;
   }
 
   .capabilities--double-column .capabilities__card .capabilities__card-text {
@@ -1462,6 +1463,29 @@
   }
 
 }
+
+
+@media (max-width: 800px) {
+  .capabilities--single-column .capabilities__card .capabilities__card__image {
+    scale: 2;
+    position: relative;
+    left: 115px;
+    top: 140px;
+  }
+}
+
+@media (width: 768px) {
+  .capabilities--single-column .capabilities__card .capabilities__card__image {
+    scale: 2;
+    position: relative;
+    left: 135px;
+    top: 69px;
+    width: 0;
+    height: 100%;
+    min-width: 50%;
+  }
+}
+
 
 @media (max-width: 480px) {
   .capabilities {
